<resources>
    <string name="app_name">Employee Application</string>
    <string name="worksphere">WorkSphere</string>
    <string name="clock_in_status">Clock in Status</string>
    <string name="schedules_shifts">Schedules Shifts</string>
    <string name="sales_targets">Sales Targets</string>
    <string name="pay">Pay</string>
    <string name="notifications">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="sign_in">Sign in</string>
    <string name="for_all_your_employee_needs">For all Your Employee Needs</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="image_of_employees">image of employees</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="clock_in">Clock In</string>
    <string name="type_your_message">Type your message...</string>
    <string name="send_message" />
    <string name="sales">sales</string>
    <string name="save">Save</string>
    <string name="sales_achieved">Sales Achieved</string>
    <string name="todo">TODO</string>
    <string name="notificationss">Notifications</string>
    <string name="next"><![CDATA[Next>>]]></string>
    <string name="image">TODO</string>
</resources>