<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="251sp"
        android:layout_height="wrap_content"
        android:text="@string/worksphere"
        android:textColor="@color/brownSandy"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonClockin"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginStart="120sp"
        android:layout_marginTop="40sp"
        android:background="@color/brownTan"
        android:onClick="view"
        android:text="@string/clock_in_status" />

    <Button
        android:id="@+id/buttonShifts"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginStart="120sp"
        android:layout_marginTop="40sp"
        android:background="@color/brownTan"
        android:onClick="view"
        android:text="@string/schedules_shifts" />

    <Button
        android:id="@+id/buttonTargets"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginStart="120sp"
        android:layout_marginTop="40sp"
        android:text="@string/sales_targets"
        android:onClick="view"
        android:background="@color/brownTan"/>

    <Button
        android:id="@+id/buttonPay"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginStart="120sp"
        android:layout_marginTop="40sp"
        android:text="@string/pay"
        android:onClick="view"
        android:background="@color/brownTan"/>

    <Button
        android:id="@+id/buttonNotification"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginStart="120sp"
        android:layout_marginTop="40sp"
        android:text="@string/notifications"
        android:onClick="view"
        android:layout_marginBottom="30sp"
        android:background="@color/brownTan"/>


</LinearLayout>