<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="251sp"
        android:layout_height="wrap_content"
        android:text="@string/worksphere"
        android:textColor="@color/brownSandy"
        android:textSize="20sp" />

    <!-- Chat messages ListView -->
    <ListView
        android:id="@+id/messageList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:stackFromBottom="true" />

    <!-- Input layout for typing message -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Message input field -->
        <EditText
            android:id="@+id/messageInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type_your_message"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="5"
            android:padding="12dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="" />

        <!-- Send button -->
        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="49dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/send_message"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_send"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</LinearLayout>