<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="2dp"
        android:minHeight="120dp"
        app:cardBackgroundColor="#F5E6DC"
        app:cardElevation="2dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            tools:ignore="VisualLintBounds">

            <TextView
                style="@style/viewParent.headerText"
                android:minHeight="48dp"
                android:onClick="view"
                android:text="@string/notificationss"
                android:textColor="#7B3F00" />

            <Button
                android:id="@+id/buttonNotification"
                android:layout_width="108dp"
                android:layout_height="48sp"
                android:layout_marginHorizontal="150sp"
                android:background="@drawable/buttonshapecreambg"
                android:fontFamily="@font/calibri"
                android:onClick="view"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="#FF000000"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_notifi"
        android:layout_centerVertical="true"
        android:elevation="13dp"
        android:contentDescription="@string/todo" />

</RelativeLayout>

